// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectFilterComponent matches snapshot 1`] = `
<FieldSet
  className=""
  legend="title"
  legendSrOnly={true}
>
  <CheckBox
    className="tm-checkbox-transparent"
    disabled={false}
    id="checkboxdescription-filterType"
    label="description"
    labelSrOnly={false}
    name="description"
    onCheckBoxClick={[Function]}
    selectionRef="ref"
    small={false}
    title="description"
    value={true}
  />
  <CheckBox
    className="tm-checkbox-transparent"
    disabled={false}
    id="checkboxdescription-filterType"
    label="description"
    labelSrOnly={false}
    name="description"
    onCheckBoxClick={[Function]}
    selectionRef="ref"
    small={false}
    title="description"
    value={true}
  />
  <CheckBox
    className="tm-checkbox-transparent"
    disabled={false}
    id="checkboxdescription 2-filterType"
    label="description 2"
    labelSrOnly={false}
    name="description 2"
    onCheckBoxClick={[Function]}
    selectionRef="ref"
    small={false}
    title="description 2"
    value={true}
  />
</FieldSet>
`;

exports[`MultiSelectFilterComponent matches snapshot when groupAlpha is true 1`] = `
<FieldSet
  className=""
  legend="title"
  legendSrOnly={true}
>
  <div
    className="usa-grid-full term-group term-group-first"
  >
    <div
      className="term-title"
    >
      D
    </div>
    <CheckBox
      className="tm-checkbox-transparent"
      disabled={false}
      id="checkboxdescription-filterType"
      label="description"
      labelSrOnly={false}
      name="description"
      onCheckBoxClick={[Function]}
      selectionRef="ref"
      small={false}
      title="description"
      value={true}
    />
  </div>
  <div
    className="usa-grid-full term-group "
  >
    <div
      className="term-title"
    >
      A
    </div>
    <CheckBox
      className="tm-checkbox-transparent"
      disabled={false}
      id="checkboxdescription-filterType"
      label="description"
      labelSrOnly={false}
      name="description"
      onCheckBoxClick={[Function]}
      selectionRef="ref"
      small={false}
      title="description"
      value={true}
    />
  </div>
  <div
    className="usa-grid-full term-group "
  >
    <div
      className="term-title"
    >
      #
    </div>
    <CheckBox
      className="tm-checkbox-transparent"
      disabled={false}
      id="checkboxdescription 2-filterType"
      label="description 2"
      labelSrOnly={false}
      name="description 2"
      onCheckBoxClick={[Function]}
      selectionRef="ref"
      small={false}
      title="description 2"
      value={true}
    />
  </div>
</FieldSet>
`;
